--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "twilio": "^3.52.0"
   },
   "devDependencies": {
+    "cookie-session": "^1.4.0",
     "express-session": "^1.17.1",
     "nodemon": "^1.19.1"
   }
