--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "axios": "^0.21.0",
     "bcrypt": "2.0.0",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
