--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-skeleton",
   "version": "1.0.0",
   "engines": {
-    "node": "12.x"
+    "node": "10.20.1"
   },
   "description": "",
   "main": "server.js",
