--- a/.env
+++ b/.env
@@ -3,9 +3,5 @@ DB_USER=labber
 DB_PASS=labber
 DB_NAME=midterm
 # Uncomment and set to true for Heroku
-# DB_SSL=true if heroku
+DB_SSL=true
 DB_PORT=5432
-
-
-export TWILIO_ACCOUNT_SID=AC74082a20169c8f3ee23fd7fd6a3574c9
-export TWILIO_AUTH_TOKEN=22e3918b23911cd8ceccaa1182ce0225
