--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "node-sass-middleware": "^0.11.0",
     "pg": "^6.4.2",
     "pg-native": "^3.0.0",
-    "twilio": "^3.53.0"
+    "twilio": "^3.53.0",
+    "cookie-session": "^1.4.0"
   },
   "devDependencies": {
-    "cookie-session": "^1.4.0",
     "express-session": "^1.17.1",
     "nodemon": "^1.19.1"
   }
